<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">search</string>
    <string name="hintSearch">Serch something</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_image_advanced_search">ImageAdvancedSearch</string>
    <string name="advanced_search_options">Advanced search options</string>
    <string name="tvImageSize">Image Size</string>
    <string name="Color_Filter">Color Filter</string>
    <string name="ImageType">Image Type</string>
    <string name="SiteFilter">Site filter</string>
    <string name="EnterSite">Enter Site</string>
    <string name="Done">Done</string>
    <string name="text_image_size">Pick an Image Size</string>
        <string name="text_color_filter">Pick a Color</string>
            <string name="text_image_type">Pick an Image Type</string>
   	<string-array name="image_size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
       	<string-array name="color_filter">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
       	<string-array name="image_type">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="LoadMore">Load More Images</string>

</resources>
